--- a/app/globals.css
+++ b/app/globals.css
@@ -8,9 +8,11 @@
   0% {
     transform: translate3d(-8%, -6%, 0) scale(1);
   }
+
   50% {
     transform: translate3d(10%, 8%, 0) scale(1.06);
   }
+
   100% {
     transform: translate3d(-8%, -6%, 0) scale(1);
   }
@@ -20,9 +22,11 @@
   0% {
     transform: translate3d(10%, 6%, 0) scale(1);
   }
+
   50% {
     transform: translate3d(-10%, -8%, 0) scale(1.08);
   }
+
   100% {
     transform: translate3d(10%, 6%, 0) scale(1);
   }
@@ -39,9 +43,18 @@
 }
 
 @media (prefers-reduced-motion: reduce) {
+
   .gy-bubble-a,
   .gy-bubble-b {
     animation: none;
   }
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
